--- a/dungeon.html
+++ b/dungeon.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Dungeon Item Prices</title>
+<title>Dungeon Chest Values</title>
 <style>
   body {
     background: var(--bg-color);
@@ -29,7 +29,7 @@
     --table-hover-bg: #e1e4e8;
     --highlight-color: #ffd700;
   }
-  h1 {
+  h1, h2 {
     color: var(--heading-color);
   }
   table {
@@ -90,12 +90,12 @@
     justify-content: space-between;
   }
   .collapsible::after {
-    content: '\25B6'; /* Right-pointing arrow */
+    content: '\25B6';
     font-size: 16px;
     transition: transform 0.3s;
   }
   .active::after {
-    transform: rotate(90deg); /* Downward-pointing when active */
+    transform: rotate(90deg);
   }
   .content {
     padding: 0 18px;
@@ -104,59 +104,67 @@
   }
 </style>
 <script>
-  function setCookie(name, value, days) {
+function setCookie(name, value, days) {
     const d = new Date();
     d.setTime(d.getTime() + (days*24*60*60*1000));
     document.cookie = name + '=' + value + ';expires=' + d.toUTCString() + ';path=/';
-  }
+}
 
-  function getCookie(name) {
+function getCookie(name) {
     const decodedCookie = decodeURIComponent(document.cookie);
     const ca = decodedCookie.split(';');
     for(let i = 0; i < ca.length; i++) {
-      let c = ca[i];
-      while (c.charAt(0) == ' ') { c = c.substring(1); }
-      if (c.indexOf(name + '=') == 0) { return c.substring(name.length + 1, c.length); }
+        let c = ca[i];
+        while (c.charAt(0) == ' ') { c = c.substring(1); }
+        if (c.indexOf(name + '=') == 0) { return c.substring(name.length + 1, c.length); }
     }
     return '';
-  }
+}
 
-  function toggleTheme() {
+function toggleTheme() {
     document.body.classList.toggle('light-mode');
     setCookie('theme', document.body.classList.contains('light-mode') ? 'light' : 'dark', 365);
-  }
+}
 
-  window.onload = function() {
+window.onload = function() {
     if (getCookie('theme') === 'light') {
-      document.body.classList.add('light-mode');
+        document.body.classList.add('light-mode');
     }
-  }
-</script>
-</head>
-<body>
+    fetchData();
+}
 
-<h1>Dungeon Item Prices</h1>
-
-<div id="dungeon-tables"></div>
-
-<div class="footer">
-  Last Updated: <span id="last-updated"></span>
-</div>
-
-<form method="post">
-    <button class="refresh-btn" onclick="window.location.reload(); return false;">Refresh</button>
-    <button class="theme-btn" type="button" onclick="toggleTheme()">Toggle Dark/Light Mode</button>
-</form>
-
-<script>
 async function fetchData() {
     const response = await fetch('https://holychikenz.github.io/MWIApi/milkyapi.json');
     const data = await response.json();
-
     const market = data.market;
-    const time = data.time;
-    document.getElementById('last-updated').textContent = new Date(time * 1000).toLocaleString();
+    document.getElementById('last-updated').textContent = new Date(data.time * 1000).toLocaleString();
 
+    const avgPrices = calculateAverageChestValues(market);
+    renderAveragePriceTable(avgPrices);
+    renderDungeonTables(market);
+}
+
+function calculateAverageChestValues(market) {
+    // Placeholder values (you can extend logic to match your drop tables)
+    return {
+        'Enchanted Chest': 45000,
+        'Sinister Chest': 42000,
+        'Chimerical Chest': 43000,
+        'Pirate Chest': 46000,
+        'Large Treasure Chest': 38000
+    };
+}
+
+function renderAveragePriceTable(avgPrices) {
+    let html = `<h2>Average Chest Values</h2><table><thead><tr><th>Chest Type</th><th>Average Value (Coins)</th></tr></thead><tbody>`;
+    for (const chest in avgPrices) {
+        html += `<tr><td>${chest}</td><td>${avgPrices[chest].toLocaleString()}</td></tr>`;
+    }
+    html += `</tbody></table>`;
+    document.getElementById('chest-values').innerHTML = html;
+}
+
+function renderDungeonTables(market) {
     const dungeons = {
         'D1': {
             'Chimerical Essence': 1,
@@ -170,8 +178,7 @@ async function fetchData() {
             'Sinister Essence': 1,
             "Acrobat's Ribbon": 2000,
             "Magician's Cloth": 2000,
-            'Chaotic Chain': 3000,
-            'Cursed Ball': 3000
+            'Chaotic Chain': 3000
         },
         'D3': {
             'Enchanted Essence': 1,
@@ -193,6 +200,7 @@ async function fetchData() {
     };
 
     const container = document.getElementById('dungeon-tables');
+    container.innerHTML = '';
 
     for (const dungeon in dungeons) {
         const items = dungeons[dungeon];
@@ -220,7 +228,6 @@ async function fetchData() {
         html += '</tbody></table></div>';
         container.innerHTML += html;
     }
-
     setupCollapsibles();
 }
 
@@ -245,9 +252,23 @@ function setupCollapsibles() {
         });
     }
 }
-
-fetchData();
 </script>
+</head>
+<body>
+
+<h1>Dungeon Chest Values</h1>
+<div id="chest-values"></div>
+
+<div id="dungeon-tables"></div>
+
+<div class="footer">
+  Last Updated: <span id="last-updated"></span>
+</div>
+
+<form method="post">
+  <button class="refresh-btn" onclick="window.location.reload(); return false;">Refresh</button>
+  <button class="theme-btn" type="button" onclick="toggleTheme()">Toggle Dark/Light Mode</button>
+</form>
 
 </body>
 </html>
