--- a/dungeon.html
+++ b/dungeon.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Dungeon Chest Values</title>
+<title>Dungeon Item Prices</title>
 <style>
   body {
     background: var(--bg-color);
@@ -29,7 +29,7 @@
     --table-hover-bg: #e1e4e8;
     --highlight-color: #ffd700;
   }
-  h1, h2 {
+  h1 {
     color: var(--heading-color);
   }
   table {
@@ -105,160 +105,36 @@
 </style>
 <script>
 function setCookie(name, value, days) {
-    const d = new Date();
-    d.setTime(d.getTime() + (days*24*60*60*1000));
-    document.cookie = name + '=' + value + ';expires=' + d.toUTCString() + ';path=/';
+  const d = new Date();
+  d.setTime(d.getTime() + (days*24*60*60*1000));
+  document.cookie = name + '=' + value + ';expires=' + d.toUTCString() + ';path=/';
 }
-
 function getCookie(name) {
-    const decodedCookie = decodeURIComponent(document.cookie);
-    const ca = decodedCookie.split(';');
-    for(let i = 0; i < ca.length; i++) {
-        let c = ca[i];
-        while (c.charAt(0) == ' ') { c = c.substring(1); }
-        if (c.indexOf(name + '=') == 0) { return c.substring(name.length + 1, c.length); }
-    }
-    return '';
+  const decodedCookie = decodeURIComponent(document.cookie);
+  const ca = decodedCookie.split(';');
+  for(let i = 0; i < ca.length; i++) {
+    let c = ca[i];
+    while (c.charAt(0) == ' ') { c = c.substring(1); }
+    if (c.indexOf(name + '=') == 0) { return c.substring(name.length + 1, c.length); }
+  }
+  return '';
 }
-
 function toggleTheme() {
-    document.body.classList.toggle('light-mode');
-    setCookie('theme', document.body.classList.contains('light-mode') ? 'light' : 'dark', 365);
+  document.body.classList.toggle('light-mode');
+  setCookie('theme', document.body.classList.contains('light-mode') ? 'light' : 'dark', 365);
 }
-
 window.onload = function() {
-    if (getCookie('theme') === 'light') {
-        document.body.classList.add('light-mode');
-    }
-    fetchData();
-}
-
-async function fetchData() {
-    const response = await fetch('https://holychikenz.github.io/MWIApi/milkyapi.json');
-    const data = await response.json();
-    const market = data.market;
-    document.getElementById('last-updated').textContent = new Date(data.time * 1000).toLocaleString();
-
-    const avgPrices = calculateAverageChestValues(market);
-    renderAveragePriceTable(avgPrices);
-    renderDungeonTables(market);
-}
-
-function calculateAverageChestValues(market) {
-    // Placeholder values (you can extend logic to match your drop tables)
-    return {
-        'Enchanted Chest': 45000,
-        'Sinister Chest': 42000,
-        'Chimerical Chest': 43000,
-        'Pirate Chest': 46000,
-        'Large Treasure Chest': 38000
-    };
-}
-
-function renderAveragePriceTable(avgPrices) {
-    let html = `<h2>Average Chest Values</h2><table><thead><tr><th>Chest Type</th><th>Average Value (Coins)</th></tr></thead><tbody>`;
-    for (const chest in avgPrices) {
-        html += `<tr><td>${chest}</td><td>${avgPrices[chest].toLocaleString()}</td></tr>`;
-    }
-    html += `</tbody></table>`;
-    document.getElementById('chest-values').innerHTML = html;
-}
-
-function renderDungeonTables(market) {
-    const dungeons = {
-        'D1': {
-            'Chimerical Essence': 1,
-            'Griffin Leather': 600,
-            'Manticore Sting': 1000,
-            'Jackalope Antler': 1200,
-            'Dodocamel Plume': 3000,
-            'Griffin Talon': 3000
-        },
-        'D2': {
-            'Sinister Essence': 1,
-            "Acrobat's Ribbon": 2000,
-            "Magician's Cloth": 2000,
-            'Chaotic Chain': 3000
-        },
-        'D3': {
-            'Enchanted Essence': 1,
-            'Royal Cloth': 2000,
-            "Knight's Ingot": 2000,
-            "Bishop's Scroll": 2000,
-            'Regal Jewel': 3000,
-            'Sundering Jewel': 3000
-        },
-        'D4': {
-            'Pirate Essence': 1,
-            'Marksman Brooch': 2000,
-            'Corsair Crest': 2000,
-            'Damaged Anchor': 2000,
-            'Maelstrom Plating': 2000,
-            'Kraken Leather': 2000,
-            'Kraken Fang': 3000
-        }
-    };
-
-    const container = document.getElementById('dungeon-tables');
-    container.innerHTML = '';
-
-    for (const dungeon in dungeons) {
-        const items = dungeons[dungeon];
-        let rows = [];
-        let bestItem = '';
-        let bestValue = -Infinity;
-
-        for (const item in items) {
-            const tokens = items[item];
-            const ask = market[item]?.ask ?? -1;
-            const bid = market[item]?.bid ?? -1;
-            const maxVal = Math.max(ask, bid);
-            const valuePerToken = (maxVal > 0 && tokens > 0) ? (maxVal / tokens) : 0;
-            rows.push({item, tokens, ask, bid, valuePerToken});
-            if (valuePerToken > bestValue) {
-                bestValue = valuePerToken;
-                bestItem = item;
-            }
-        }
-
-        let html = `<button class="collapsible">${dungeon}</button><div class="content"><table><thead><tr><th>Item</th><th>Tokens</th><th>Ask Price</th><th>Bid Price</th><th>Money per Token</th></tr></thead><tbody>`;
-        for (const row of rows) {
-            html += `<tr class="${row.item === bestItem ? 'highlight' : ''}"><td>${row.item}</td><td>${row.tokens}</td><td>${row.ask !== -1 ? row.ask.toLocaleString() : 'N/A'}</td><td>${row.bid !== -1 ? row.bid.toLocaleString() : 'N/A'}</td><td>${row.valuePerToken.toFixed(2)}</td></tr>`;
-        }
-        html += '</tbody></table></div>';
-        container.innerHTML += html;
-    }
-    setupCollapsibles();
-}
-
-function setupCollapsibles() {
-    const coll = document.getElementsByClassName('collapsible');
-    for (let i = 0; i < coll.length; i++) {
-        const content = coll[i].nextElementSibling;
-        const dungeon = coll[i].innerText;
-        if (getCookie('collapse_' + dungeon) === 'open') {
-            content.style.display = 'block';
-            coll[i].classList.add('active');
-        }
-        coll[i].addEventListener('click', function() {
-            this.classList.toggle('active');
-            if (content.style.display === 'block') {
-                content.style.display = 'none';
-                setCookie('collapse_' + dungeon, 'closed', 365);
-            } else {
-                content.style.display = 'block';
-                setCookie('collapse_' + dungeon, 'open', 365);
-            }
-        });
-    }
+  if (getCookie('theme') === 'light') {
+    document.body.classList.add('light-mode');
+  }
 }
 </script>
 </head>
 <body>
 
-<h1>Dungeon Chest Values</h1>
-<div id="chest-values"></div>
+<h1>Dungeon Item Prices</h1>
 
+<div id="average-values"></div>
 <div id="dungeon-tables"></div>
 
 <div class="footer">
@@ -270,5 +146,48 @@ function setupCollapsibles() {
   <button class="theme-btn" type="button" onclick="toggleTheme()">Toggle Dark/Light Mode</button>
 </form>
 
+<script>
+async function fetchData() {
+  const response = await fetch('https://holychikenz.github.io/MWIApi/milkyapi.json');
+  const data = await response.json();
+  const market = data.market;
+  const time = data.time;
+  document.getElementById('last-updated').textContent = new Date(time * 1000).toLocaleString();
+
+  const lootTables = {
+    'Enchanted Chest': [...],
+    'Sinister Chest': [...],
+    'Chimerical Chest': [...],
+    'Pirate Chest': [...],
+    'Large Treasure Chest': [...]
+  };
+
+  const avgContainer = document.getElementById('average-values');
+  let avgHTML = '<h2>Average Chest Value</h2><table><thead><tr><th>Chest</th><th>Average Value</th></tr></thead><tbody>';
+
+  for (const chestName in lootTables) {
+    let total = 0;
+    for (const item of lootTables[chestName]) {
+      const avgQty = (item.minQuantity + item.maxQuantity) / 2;
+      const price = market[item.name]?.ask ?? market[item.name]?.bid ?? 0;
+      total += price * avgQty * (item.probability / 100);
+    }
+    avgHTML += `<tr><td>${chestName}</td><td>${Math.round(total).toLocaleString()}</td></tr>`;
+  }
+
+  avgHTML += '</tbody></table>';
+  avgContainer.innerHTML = avgHTML;
+
+  setupDungeonTables(market);
+}
+
+function setupDungeonTables(market) {
+  // existing code for dungeon tables...
+}
+
+fetchData();
+</script>
+
 </body>
 </html>
+
